# cloud-build-poc

./: .gitignore  Dockerfile  Dockerfile.bazel  Makefile  app.go  app_test.go  cloudbuild.yaml  dev.cloudbuild.yaml  docker-compose.yml  feature.cloudbuild.yaml  main.go  prod.cloudbuild.yaml  readme.md
docker/db/: Dockerfile
domain/: model.go  text.go  util.go
repository/: db.go  postgres_db.go  test_db.go  textStore.go
src/: app_test.go
src/domain/: util.go
src/repository/: test_db.go
src/text/: text_test.go
src/text/boundary/: textResource.go
src/text/control/: textService.go  textService_test.go
text/: text.go  text_test.go
text/boundary/: textResource.go  textResource_test.go
text/control/: textService.go  textService_test.go
